# Radroach

./: .dir-locals.el  .gitignore  Doxyfile  Makefile  Makefile.in  README  actions.c  cbot.c  cbot.h  configure  configure.ac  example.conf  getcommit.sh  mp.sh  radroach.c  radroach.h
src/: basic_actions.c  plugins.c  radroach.c  radroach.h  util.c
src/plugins/: basic_actions.c  join.c  p-reload.c  part.c  plugins.h  reply.c  s-eval.c  s-eval.scm  say.c  sum.c
