AC_INIT(Radroach, devel)
AC_PROG_CC
AC_LANG(C)
AC_CHECK_HEADERS(stdio.h)
AC_CHECK_HEADERS(stdlib.h)
AC_CHECK_HEADERS(string.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(errno.h)
AC_CHECK_HEADERS(error.h)
AC_CHECK_HEADERS(sys/types.h)
AC_CHECK_HEADERS(sys/socket.h)
AC_CHECK_HEADERS(netinet/in.h)
AC_CHECK_HEADERS(netdb.h)
AC_CHECK_HEADERS(regex.h)
AC_CHECK_HEADERS(confuse.h)
AC_CHECK_HEADERS(dlfcn.h)
AC_SEARCH_LIBS(cfg_init, confuse)
AC_SEARCH_LIBS(dlopen, dl)
AC_OUTPUT(Makefile)